# energy-monitor

./: .gitignore  README.md  docker-compose.yaml  influxdb.env  install.sh  telegraf.env
docker-scripts/: backup.sh  raspberry-pi-system-template.sh
energy-collector/: Pipfile  pyproject.toml  requirements.txt
energy-collector/energy_collector/: app.py  collect.py  influxdb.py  instrument.py  read_data.py
energy-collector/tests/: test_collect.py  test_smart_meter_collector.py
grafana/provisioning/dashboards/: dashboard.yaml  energy-dashboard.json
grafana/provisioning/datasources/: datasources.yaml
systemd-services/: energy-collector.service  energy-monitor-backup.service  energy-monitor-backup.timer  energy-monitor-collector.service  energy-monitor-influxdb-grafana.service  influx-db-backup.service  influx-db-backup.timer  influx-db-grafana.service
telegraf/: telegraf.conf
terraform/: init.sh  main.tf  terraform-template.tfvars  variables.tf
