[tool.poetry]
name = "energy-collector"
version = "0.1.0"
description = ""
authors = ["stesua"]

[tool.poetry.dependencies]
python = "^3.9"
minimalmodbus = "^2.0.1"
influxdb-client = "^1.34.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
