[tool.poetry]
name = "energy-collector"
version = "0.1.0"
description = ""
authors = ["stesua"]
packages = [
    { include = "energy_collector" }
]
include = [
    { path = "tests" }
]


[tool.poetry.dependencies]
python = "^3.9"
minimalmodbus = "^2.0.1"
influxdb-client = "^1.35.0"
timeloop = "^1.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
freezegun = "^1.2.2"

[tool.pytest.ini_options]
addopts = [
#    "--import-mode=importlib",
#    "-ra -q"
#    "n -auto"
    "-vv"
]
testpaths = [
    "tests"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
